# eternal-green

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
eternal_green/: __init__.py  __main__.py  cli.py  config.py  logger.py  simulator.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_logger.py  test_simulator.py
